syntax = "proto3";

option csharp_namespace = "Lirabry.Grpc";

package BookAPI;

// Request message
message BookInfoRequest {
  int32 book_id = 1;
}

// Response message
message BookFoundResponse {
  int32 book_id = 1;
  string title = 2;
  string publisher = 3;
  string author = 4;
  bool available = 5;
}

message CheckExistedBookRequest {
  repeated int32 book_id = 1;
}

message CheckExistedBookResponse {
  bool result = 1;
}

// gRPC service
service BookAPI {
  rpc FindBook (BookInfoRequest) returns (BookFoundResponse);
  rpc CheckExist (CheckExistedBookRequest) returns (CheckExistedBookResponse);
}